[tool.poetry]
name = "mlflow-pr-project"
version = "0.1.0"
description = "MLFlow project for DataScientest"
authors = ["Luigi Menale <lume.dev@outlook.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/lmenale/MLFlow_PR_Project"
keywords = ['MLFlow', 'DataScientest']
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.13.1"
tensorflow = "^2.16.1"
scikit-learn = "^1.5.0"
tensorflow-intel = "^2.16.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
seaborn = "^0.13.2"
opencv-python = "^4.10.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
